--- a/mp2.Rmd
+++ b/mp2.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Mini-Project 2"
-author: "Your Name Here"
-date: "October 31, 2017"
+author: "Aoi and Stella"
+date: "March 9, 2018"
 output: html_document
 ---
 
