--- a/mp2.Rmd
+++ b/mp2.Rmd
@@ -16,3 +16,15 @@ load("candidates.rda")
 load("committees.rda")
 load("contributions.rda")
 ```
+
+The data set is from 2011-2012.
+canditates = Candidate Master File
+committees = Committee Master File
+contributions = Contributions to Candidates (and other expenditures) from committees
+
+idea
+- is there a relaitonship between amount of contribution and being elected?
+
+- which contributor is contributing the most? and is there a contributor which tends to contribute to the winner? and the relation with the transaction type ==> use candidate ids to link to the candidates  
+
+
