--- a/mp2.Rmd
+++ b/mp2.Rmd
@@ -15,6 +15,9 @@ load("house_elections.rda")
 load("candidates.rda")
 load("committees.rda")
 load("contributions.rda")
+library(tidyverse)
+library(dplyr)
+
 ```
 
 The data set is from 2011-2012.
@@ -30,4 +33,20 @@ idea
 
 - How different are men and women candidates in general? the amount of contribution, the amount of voting, and the rate of being elected 
 
+```{r}
+all_contributions <- contributions %>% 
+  group_by(cand_id) %>%
+  summarize(contribuion_sum = sum(transaction_amt)) 
+  
+candidates_n_contributions <- inner_join(candidates, contributions)
+
+house_elections <- house_elections %>%
+  rename(cand_id = fec_id)
+
+candidates_n_contributions %>% left_join( house_elections, by = "cand_id")
+```
+
+```{r}
+
+```
 
