--- a/mp2.Rmd
+++ b/mp2.Rmd
@@ -101,8 +101,10 @@ top_10_contributors <- money_n_ppl %>%
 
 top_10 <- top_10_contributors$cmte_id
 
+
+
 top_10_candi <- contributions %>%
-  filter(top_10)
+  filter(cmte_id %in% top_10)
 
 
 data_sum <- contributions %>% inner_join (house_elections, by = "cand_id")
@@ -147,3 +149,29 @@ we could map like contributor to the candidate on the map (if it looks interesti
 sum_contri %>% filter(sum_win > 20)
 ```
 
+
+Mapping 
+```{r}
+library(fiftystater)
+
+data("fifty_states") # this line is optional due to lazy data loading
+
+crimes <- data.frame(state = tolower(rownames(USArrests)), USArrests)
+
+# map_id creates the aesthetic mapping to the state name column in your data
+p <- ggplot(crimes, aes(map_id = state)) + 
+  # map points to the fifty_states shape data
+  geom_map(aes(fill = Assault), map = fifty_states) + 
+  expand_limits(x = fifty_states$long, y = fifty_states$lat) +
+  coord_map() +
+  scale_x_continuous(breaks = NULL) + 
+  scale_y_continuous(breaks = NULL) +
+  labs(x = "", y = "") +
+  theme(legend.position = "bottom", 
+        panel.background = element_blank())
+
+p
+# add border boxes to AK/HI
+p + fifty_states_inset_boxes() 
+
+```
