--- a/mp2.Rmd
+++ b/mp2.Rmd
@@ -170,11 +170,33 @@ sum_contribution <- contributions %>%
 sum_data <- inner_join(sum_vote, sum_contribution)
 ```
 =======
-
-
 ```{r}
-SchoolData$Grade[SchoolData$Grade==5] <- "Grade Five"
+
+sum_data$state[sum_data$state== "ND"] <- "north dakota"
+sum_data$state[sum_data$state== "NE"] <- "nebraska"
+sum_data$state[sum_data$state== "NH"] <- "new hampshire"
+sum_data$state[sum_data$state== "NJ"] <- "new jersey"
+sum_data$state[sum_data$state== "NM"] <- "new mexico"
+sum_data$state[sum_data$state== "NV"] <- "nevada"
+sum_data$state[sum_data$state== "NY"] <- "new york"
+sum_data$state[sum_data$state== "OH"] <- "ohio"
+sum_data$state[sum_data$state== "OK"] <- "oklahoma"
+sum_data$state[sum_data$state== "OR"] <- "oregon"
+sum_data$state[sum_data$state== "PA"] <- "pennsylvania"
+sum_data$state[sum_data$state== "RI"] <- "rhode island"
+sum_data$state[sum_data$state== "SC"] <- "south carolina"
+sum_data$state[sum_data$state== "SD"] <- "south dakota"
+sum_data$state[sum_data$state== "TN"] <- "tennessee"
+sum_data$state[sum_data$state== "TX"] <- "texas"
+sum_data$state[sum_data$state== "UT"] <- "utah"
+sum_data$state[sum_data$state== "VA"] <- "virginia"
+sum_data$state[sum_data$state== "VT"] <- "vermont"
+sum_data$state[sum_data$state== "WA"] <- "washington"
+sum_data$state[sum_data$state== "WI"] <- "wisconsin"
+sum_data$state[sum_data$state== "WV"] <- "west virginia"
+sum_data$state[sum_data$state== "WY"] <- "wyoming"
 ```
+
 
 
 
