--- a/mp2.Rmd
+++ b/mp2.Rmd
@@ -231,25 +231,25 @@ sum_data$state[sum_data$state== "WY"] <- "wyoming"
 # Mapping
 
 
-data("fifty_states") # this line is optional due to lazy data loading
-
-crimes <- data.frame(state = tolower(rownames(USArrests)), USArrests)
-
-# map_id creates the aesthetic mapping to the state name column in your data
-p <- ggplot(crimes, aes(map_id = state)) + 
-  # map points to the fifty_states shape data
-  geom_map(aes(fill = Assault), map = fifty_states) + 
-  expand_limits(x = fifty_states$long, y = fifty_states$lat) +
-  coord_map() +
-  scale_x_continuous(breaks = NULL) + 
-  scale_y_continuous(breaks = NULL) +
-  labs(x = "", y = "") +
-  theme(legend.position = "bottom", 
-        panel.background = element_blank())
-
-p
-# add border boxes to AK/HI
-p + fifty_states_inset_boxes() 
+# data("fifty_states") # this line is optional due to lazy data loading
+# 
+# crimes <- data.frame(state = tolower(rownames(USArrests)), USArrests)
+# 
+# # map_id creates the aesthetic mapping to the state name column in your data
+# p <- ggplot(crimes, aes(map_id = state)) + 
+#   # map points to the fifty_states shape data
+#   geom_map(aes(fill = Assault), map = fifty_states) + 
+#   expand_limits(x = fifty_states$long, y = fifty_states$lat) +
+#   coord_map() +
+#   scale_x_continuous(breaks = NULL) + 
+#   scale_y_continuous(breaks = NULL) +
+#   labs(x = "", y = "") +
+#   theme(legend.position = "bottom", 
+#         panel.background = element_blank())
+# 
+# p
+# # add border boxes to AK/HI
+# p + fifty_states_inset_boxes() 
 
 ```
 
