--- a/mp2.Rmd
+++ b/mp2.Rmd
@@ -151,7 +151,7 @@ sum_contri %>% filter(sum_win > 20)
 ```
 
 
-<<<<<<< HEAD
+
 ```{r}
 fifty_states <-c("AK", "AL", "AR", "AZ", "CA", "CO", "CT", "DE", "FL", "GA", "HI", "IA", "ID", "IL", "IN", "KS", "KY", "LA", "MA", "MD", "ME", "MI", "MN", "MO", "MS", "MT", "NC", "ND", "NE", "NH", "NJ", "NM", "NV", "NY", "OH", "OK", "OR", "PA", "RI", "SC", "SD", "TN", "TX", "UT", "VA", "VT", "WA", "WI", "WV", "WY" )
 
@@ -169,7 +169,8 @@ sum_contribution <- contributions %>%
 
 sum_data <- inner_join(sum_vote, sum_contribution)
 ```
-=======
+
+
 ```{r}
 sum_data$state[sum_data$state== "AK"] <- "alaska"
 sum_data$state[sum_data$state== "AL"] <- "alabama"
@@ -182,8 +183,8 @@ sum_data$state[sum_data$state== "DE"] <- "delaware"
 sum_data$state[sum_data$state== "FL"] <- "florida"
 sum_data$state[sum_data$state== "GA"] <- "georgia"
 sum_data$state[sum_data$state== "HI"] <- "hawaii"
-sum_data$state[sum_data$state== "IA"] <- "lowa"
-sum_data$state[sum_data$state== "ID"] <- "ldaho"
+sum_data$state[sum_data$state== "IA"] <- "iowa"
+sum_data$state[sum_data$state== "ID"] <- "idaho"
 sum_data$state[sum_data$state== "IL"] <- "illinois"
 sum_data$state[sum_data$state== "IN"] <- "indiana"
 sum_data$state[sum_data$state== "KS"] <- "kansas"
@@ -233,7 +234,7 @@ sum_data$state[sum_data$state== "WY"] <- "wyoming"
 
 # data("fifty_states") # this line is optional due to lazy data loading
 # 
-# crimes <- data.frame(state = tolower(rownames(USArrests)), USArrests)
+crimes <- data.frame(state = tolower(rownames(USArrests)), USArrests)
 # 
 # # map_id creates the aesthetic mapping to the state name column in your data
 # p <- ggplot(crimes, aes(map_id = state)) + 
@@ -266,7 +267,7 @@ mapping <- ggplot(sum_data, aes(map_id = state)) +
   scale_y_continuous(breaks = NULL) +
   labs(x = "", y = "") +
   theme(legend.position = "bottom", 
-        panel.background = element_blank()) + labs(fill = "Number of Votes") + scale_fill_continuous(breaks = c(250000, 6270000,12204357), labels = c("240k","6270K", "12300K"))
+        panel.background = element_blank()) + labs(fill = "Number of Votes") + scale_fill_continuous(breaks = c(250000, 6270000,12204357), labels = c("240k","6270K", "12300K"),low = "#9BF5FF", high = "#53868B")
   
 
 
@@ -286,9 +287,11 @@ mapping <- ggplot(sum_data, aes(map_id = state)) +
   scale_y_continuous(breaks = NULL) +
   labs(x = "", y = "") +
   theme(legend.position = "bottom", 
-        panel.background = element_blank()) + labs(fill = "Number of Votes") + scale_fill_continuous(breaks = c(1170000, 214200000,425544900), labels = c("240k","214200K", "426000K"))
-  
+        panel.background = element_blank()) + labs(fill = "Number of Votes") + scale_fill_continuous(breaks = c(1170000, 214200000,425544900), labels = c("240k","214200K", "426000K"),low = "#B0E2FF", high = "#607B8B") 
 
+#+ scale_color_continuous()
+  
+# scale_color_continuous 
 
 # add border boxes to AK/HI
 mapping + fifty_states_inset_boxes()
