--- a/mp2.Rmd
+++ b/mp2.Rmd
@@ -23,23 +23,28 @@ library(gridExtra)
 ```
 
 
-```{r}
-# making the list 
+```{r, message=FALSE, warning=FALSE, echo=FALSE}
+# making the list for fifty states
 fifty_states_name <-c("AK", "AL", "AR", "AZ", "CA", "CO", "CT", "DE", "FL", "GA", "HI", "IA", "ID", "IL", "IN", "KS", "KY", "LA", "MA", "MD", "ME", "MI", "MN", "MO", "MS", "MT", "NC", "ND", "NE", "NH", "NJ", "NM", "NV", "NY", "OH", "OK", "OR", "PA", "RI", "SC", "SD", "TN", "TX", "UT", "VA", "VT", "WA", "WI", "WV", "WY" )
 
+# renaming the column name of fec_id to cand_id and filter it to just include 50 states
 house_elections <- house_elections %>%
   rename(cand_id = fec_id) %>%
   filter(state %in% fifty_states_name)
 
+#filter the data to just include 50 states
 candidates <- candidates %>%
   filter(cand_state %in% fifty_states_name)
 
 ```
 
 
-```{r}
+```{r, message=FALSE, warning=FALSE, echo=FALSE}
+# adding a column that say win = 1 and lose = 0
 house_elections <- house_elections %>%
   mutate(winner = ifelse(ge_winner == "W", 1, 0)) 
+
+# another 2 unnecessity columns appears so unshow it
 house_elections$"ifelse(ge_winner == \"W\", 1, 0)"<- NULL
 house_elections$"winner <- ifelse(ge_winner == \"W\", 1, 0)"<- NULL
 ```
@@ -48,15 +53,17 @@ house_elections$"winner <- ifelse(ge_winner == \"W\", 1, 0)"<- NULL
 
 
 - group by party contribution map per party 
-```{r}
+```{r, message=FALSE, warning=FALSE, echo=FALSE}
+# join the candidates data and contributions data
 candi_conti <- inner_join(candidates, contributions)
 
+# compute the amount of contribution per state and party.
 party_contribution <- candi_conti %>%
   group_by(cand_state, cand_party_affiliation) %>%
   summarise(contri_party = sum(transaction_amt)) 
 ```
 
-```{r}
+```{r, message=FALSE, warning=FALSE, echo=FALSE}
 # changing the the observation name in the sum_data data frame
 party_contribution$cand_state[party_contribution$cand_state== "AK"] <- "alaska"
 party_contribution$cand_state[party_contribution$cand_state== "AL"] <- "alabama"
@@ -110,7 +117,7 @@ party_contribution$cand_state[party_contribution$cand_state== "WV"] <- "west vir
 party_contribution$cand_state[party_contribution$cand_state== "WY"] <- "wyoming"
 ```
 
-```{r}
+```{r, message=FALSE, warning=FALSE, echo=FALSE}
 
 parties <- c("CON", "DEM", "DFL", "GRE", "IAP", "IND", "LIB", "NNE", "NPA", "OTH", "REP", "SUS", "SWP", "UNK", "WFP")
 
@@ -133,9 +140,10 @@ mid_contri <- inner_join(min_contri,max_contri) %>%
 party_contribution <- inner_join(party_contribution, mid_contri)
 
 ```
-```{r}
+```{r, message=FALSE, warning=FALSE, echo=FALSE}
 # each party map for contribution 
-#""
+
+#mapping ""'s contribution 
 non <- party_contribution %>% filter(cand_party_affiliation == "")
 non_mapping <- ggplot(non, aes(map_id = cand_state)) +
   # map points to the fifty_states shape data
@@ -150,7 +158,7 @@ non_mapping <- ggplot(non, aes(map_id = cand_state)) +
   labs(fill = "Amount of Contribution") +
   scale_fill_continuous (low = "#B0E2FF", high = "#607B8B")
 
-#CON
+#mapping CON's contribution
 con <- party_contribution %>% filter(cand_party_affiliation == "CON")
 con_mapping <- ggplot(con, aes(map_id = cand_state)) +
   # map points to the fifty_states shape data
@@ -166,7 +174,7 @@ con_mapping <- ggplot(con, aes(map_id = cand_state)) +
   scale_fill_continuous (low = "#B0E2FF", high = "#607B8B")
 
 
-#DEM
+#mapping DEM's contribution
 dem <- party_contribution %>% filter(cand_party_affiliation == "DEM")
 dem_mapping <- ggplot(dem, aes(map_id = cand_state)) +
   # map points to the fifty_states shape data
@@ -182,7 +190,7 @@ dem_mapping <- ggplot(dem, aes(map_id = cand_state)) +
   scale_fill_continuous (breaks = c(4000, 215000000, 430000000), labels = c("4k","215000K", "430000K"), low = "#B0E2FF", high = "#607B8B")
 
 
-#DFL 
+#mapping DFL's contribution 
 dfl <- party_contribution %>% filter(cand_party_affiliation == "DFL")
 dfl_mapping <- ggplot(dfl, aes(map_id = cand_state)) +
   # map points to the fifty_states shape data
@@ -198,7 +206,7 @@ dfl_mapping <- ggplot(dfl, aes(map_id = cand_state)) +
   scale_fill_continuous (low = "#B0E2FF", high = "#607B8B")
 
 
-#GRE
+#mapping GRE's contribution
 gre <- party_contribution %>% filter(cand_party_affiliation == "GRE")
 gre_mapping <- ggplot(gre, aes(map_id = cand_state)) +
   # map points to the fifty_states shape data
@@ -214,7 +222,7 @@ gre_mapping <- ggplot(gre, aes(map_id = cand_state)) +
   scale_fill_continuous (breaks = c(250, 4400, 8608), labels = c("0.25K", "4.4K", "8.6K"), low = "#B0E2FF", high = "#607B8B")
 
 
-#IAP
+#mapping IAP's contribution
 iap <- party_contribution %>% filter(cand_party_affiliation == "IAP")
 iap_mapping <- ggplot(iap, aes(map_id = cand_state)) +
   # map points to the fifty_states shape data
@@ -230,7 +238,7 @@ iap_mapping <- ggplot(iap, aes(map_id = cand_state)) +
   scale_fill_continuous (low = "#B0E2FF", high = "#607B8B")
 
 
-#IND
+#mapping IND's contribution
 ind <- party_contribution %>% filter(cand_party_affiliation == "IND")
 ind_mapping <- ggplot(gre, aes(map_id = cand_state)) +
   # map points to the fifty_states shape data
@@ -246,7 +254,7 @@ ind_mapping <- ggplot(gre, aes(map_id = cand_state)) +
   scale_fill_continuous (breaks = c(-1000, 2000000, 4175660), labels = c("-1K", "2000K", "4180K"), low = "#B0E2FF", high = "#607B8B")
 
 
-#LIB
+#mapping LIB's contribution
 lib <- party_contribution %>% filter(cand_party_affiliation == "LIB")
 lib_mapping <- ggplot(lib, aes(map_id = cand_state)) +
   # map points to the fifty_states shape data
@@ -262,7 +270,7 @@ lib_mapping <- ggplot(lib, aes(map_id = cand_state)) +
   scale_fill_continuous (breaks = c(800, 280000, 555314), labels = c("0.8K", "280K", "555K"), low = "#B0E2FF", high = "#607B8B")
 
 
-#NNE
+#mapping NNE's contribution
 nne <- party_contribution %>% filter(cand_party_affiliation == "NNE")
 nne_mapping <- ggplot(lib, aes(map_id = cand_state)) +
   # map points to the fifty_states shape data
@@ -278,7 +286,7 @@ nne_mapping <- ggplot(lib, aes(map_id = cand_state)) +
   scale_fill_continuous (breaks = c(11725, 320000, 520000), labels = c("11K", "32K", "52K"), low = "#B0E2FF", high = "#607B8B")
 
 
-#NPA
+#mappping NPA's contribution
 npa <- party_contribution %>% filter(cand_party_affiliation == "NNE")
 npa_mapping <- ggplot(npa, aes(map_id = cand_state)) +
   # map points to the fifty_states shape data
@@ -294,7 +302,7 @@ npa_mapping <- ggplot(npa, aes(map_id = cand_state)) +
   scale_fill_continuous (low = "#B0E2FF", high = "#607B8B")
 
 
-#OTH
+#mapping OTH's contribution 
 oth <- party_contribution %>% filter(cand_party_affiliation == "OTH")
 oth_mapping <- ggplot(oth, aes(map_id = cand_state)) +
   # map points to the fifty_states shape data
@@ -310,7 +318,7 @@ oth_mapping <- ggplot(oth, aes(map_id = cand_state)) +
   scale_fill_continuous (breaks = c(74, 58000, 116637), labels = c("0.074K", "58K", "116K"), low = "#B0E2FF", high = "#607B8B")
 
 
-#REP
+#mapping REP's contribution 
 rep <- party_contribution %>% filter(cand_party_affiliation == "REP")
 rep_mapping <- ggplot(rep, aes(map_id = cand_state)) +
   # map points to the fifty_states shape data
@@ -326,7 +334,7 @@ rep_mapping <- ggplot(rep, aes(map_id = cand_state)) +
   scale_fill_continuous (breaks = c(1050, 99700000, 199441933), labels = c("1K", "99700K", "19944K"), low = "#B0E2FF", high = "#607B8B")
 
 
-#SUS
+#mapping SUS's contribution
 sus <- party_contribution %>% filter(cand_party_affiliation == "SUS")
 sus_mapping <- ggplot(sus, aes(map_id = cand_state)) +
   # map points to the fifty_states shape data
@@ -342,7 +350,7 @@ sus_mapping <- ggplot(sus, aes(map_id = cand_state)) +
   scale_fill_continuous (breaks = c(250, 270, 299), labels = c("0.25K", "0.27K", "0.3K"), low = "#B0E2FF", high = "#607B8B")
 
 
-#SWP
+#mapping SWP's contribution 
 swp <- party_contribution %>% filter(cand_party_affiliation == "SWP")
 swp_mapping <- ggplot(swp, aes(map_id = cand_state)) +
   # map points to the fifty_states shape data
@@ -351,14 +359,14 @@ swp_mapping <- ggplot(swp, aes(map_id = cand_state)) +
   coord_map() +
   scale_x_continuous(breaks = NULL) +
   scale_y_continuous(breaks = NULL) +
-  labs(x = "", y = "", title = "Contribution to Socialist Party") +
+  labs(x = "", y = "", title = "Contribution to Socialist Workers Party") +
   theme(legend.position = "bottom",
         panel.background = element_blank(), plot.title = element_text(face = "bold")) + 
   labs(fill = "Amount of Contribution") +
   scale_fill_continuous (low = "#B0E2FF", high = "#607B8B")
 
 
-#UNK
+#mapping UNK's contribution
 unk <- party_contribution %>% filter(cand_party_affiliation == "UNK")
 unk_mapping <- ggplot(unk, aes(map_id = cand_state)) +
   # map points to the fifty_states shape data
@@ -374,7 +382,7 @@ unk_mapping <- ggplot(unk, aes(map_id = cand_state)) +
   scale_fill_continuous (breaks = c(100, 140000, 280000), labels = c("0.1K", "140K", "280K"), low = "#B0E2FF", high = "#607B8B")
 
 
-#WFP: 
+#mapping WFP's contribution 
 wfp <- party_contribution %>% filter(cand_party_affiliation == "WFP")
 wfp_mapping <- ggplot(wfp, aes(map_id = cand_state)) +
   # map points to the fifty_states shape data
@@ -391,31 +399,32 @@ wfp_mapping <- ggplot(wfp, aes(map_id = cand_state)) +
 
 ```
 
-```{r}
+```{r, message=FALSE, warning=FALSE, echo=FALSE}
+#mapping out 
 # grid.arrange( non_mapping, con_mapping, dem_mapping, dfl_mapping, gre_mapping, iap_mapping, ind_mapping, lib_mapping, nne_mapping, npa_mapping, oth_mapping, rep_mapping, sus_mapping, swp_mapping, unk_mapping, wfp_mapping, nrow = 9)
 
-# non_mapping
-# con_mapping
-# dem_mapping
-# dfl_mapping
-# gre_mapping
-# iap_mapping
-# ind_mapping
-# lib_mapping
-# nne_mapping
-# npa_mapping
-# oth_mapping
-# rep_mapping
-# sus_mapping
-# swp_mapping
-# unk_mapping
-# wfp_mapping
+non_mapping
+con_mapping
+dem_mapping
+dfl_mapping
+gre_mapping
+iap_mapping
+ind_mapping
+lib_mapping
+nne_mapping
+npa_mapping
+oth_mapping
+rep_mapping
+sus_mapping
+swp_mapping
+unk_mapping
+wfp_mapping
 ```
 
 
 
 - see choose one party and see if they have more winner or not 
-```{r, message=FALSE, warning=FALSE, echo=FALSE, fig.width = 30, fig.height= 15}
+```{r, message=FALSE, warning=FALSE, echo=FALSE, fig.width = 10, fig.height= 5}
 
 target <- c("R", "D")
 
